k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: depilaciones-debby
  labels:
    app: depilaciones-debby
    environment: production
